deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iso-share
  labels:
    app: iso-share
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iso-share
  template:
    metadata:
      labels:
        app: iso-share
    spec:
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: iso-data
              mountPath: /usr/share/nginx/html
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: iso-data
          persistentVolumeClaim:
            claimName: iso-storage
        - name: nginx-config
          configMap:
            name: iso-nginx-config
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
